<?xml version="1.0"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App name. Don't translate-->
    <string name="app_name">Shuttle Music</string>
    <!-- Bottom Navigation menu item (library) - the music library/collection -->
    <string name="title_library">Library</string>
    <!-- Bottom Navigation menu item (home) - the landing screen of recent and suggested music -->
    <string name="shell_tab_home">Home</string>
    <!-- Bottom Navigation menu item (search) - searching the music library -->
    <string name="shell_tab_search">Search</string>
    <!-- Shown in the queue, to indicate the queue of songs which will play after the current song-->
    <string name="playback_up_next">Up Next</string>
    <!-- Shown at the top of the 'search' screen-->
    <string name="pref_navigation_title">Navigation</string>
    <string name="pref_show_home_on_launch_title">Show Home on launch</string>

    <string name="pref_rescan_frequency_title">Rescan frequency</string>
    <!-- Shown in the media preferences screen after the 'rescan frequency' (i.e. Weekly (Last scan 3/1/23 2:02 pm))-->
    <string name="pref_last_scan_date">(Last scan <xliff:g example="3/1/23 2:02 pm" id="date">%1$s</xliff:g>)</string>
</resources>
