...
private fun FolderListItemPreview() {
    AppTheme(
        accent = Accent.Default,
    ) {
        val artist = SampleLibrary.artists.first()
        FolderListItem(
            folder = Folder(path = listOf("primary", "Music", artist.name), songCount = artist.songCount),
            playlists = persistentListOf(),
        )
    }
}

