...
    <string name="menu_title_shuffle">Shuffle</string>
    <!-- Menu option to open the album's own detail screen -->
    <string name="menu_title_view_album">Go to album</string>
    <!-- Menu option to start 'album shuffle' mode (plays a random album, where tracks are played in order)-->
    <string name="menu_title_album_shuffle">Album Shuffle</string>
    <!-- Menu option to add this song to the queue, to play next -->
    <string name="menu_title_play_next">Play Next</string>
    <!-- Menu option to open the tag editor for this song/album/artist -->
    <string name="menu_title_edit_tags">Edit Tags</string>
    <!-- Menu option to add the selected song to the 'favorites' playlist -->
    <string name="menu_title_favorite">Favorite</string>
    <!-- Menu option to show the 'song info' dialog -->
    <string name="menu_title_song_info">Song Info</string>
...
